--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "dev":"HOST=0.0.0.0 nuxt"
+    "dev": "HOST=0.0.0.0 nuxt"
   },
   "dependencies": {
-    "expo": "~46.0.16",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-webview": "11.23.0",
-    "react-native-web": "~0.18.7",
-    "react-dom": "18.0.0",
     "@expo/webpack-config": "^0.17.0",
-    "expo-updates": "~0.14.6"
+    "expo": "~46.0.16",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
+    "link": "^1.5.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
